--- a/The-Brothers-Karamazov.asciidoc
+++ b/The-Brothers-Karamazov.asciidoc
@@ -1,7 +1,29 @@
 = The Brothers Karamazov
 Fyodor Dostoyevsky
-
+v0.0.1
 :toc:
+
+[colophon]
+== Copyright
+
+This edition of _The Adventures of Sherlock Holmes_ is maintained, archived, and curated as part of
+the GITENBERG PROJECT.
+
+This work is in the public domain.
+
+If you find any issues with this work, please report them at
+https://github.com/GITenberg/The-Time-Machine_35/issues
+
++
+
+Cover provided by Recovering the Classics
+
+Artist: Eleanor Beeden, (C) 2013
+
+Made available under a Creative Commons Attribution-NonCommercial 4.0 license
+
+https://creativecommons.org/licenses/by-nc/4.0/
+
 
 == Part I
 
