Removed superfulous chapter heading markup

--- a/book.asciidoc
+++ b/book.asciidoc
@@ -146,7 +146,7 @@ his release, and at the same time wept for her who released him. As a
 general rule, people, even the wicked, are much more naïve and
 simple-hearted than we suppose. And we ourselves are, too.
 
-==== ==== Chapter II. He Gets Rid Of His Eldest Son
+==== Chapter II. He Gets Rid Of His Eldest Son
 
 
 You can easily imagine what a father such a man could be and how he
